# what-if-simulator

./: .env.example  README.md  pyproject.toml
src/agents/: __init__.py  agent.py  shared.py
src/agents/emotion/: agent.py
src/agents/energy/: agent.py
src/agents/evaluator/: agent.py
src/agents/planner/: agent.py
src/agents/productivity/: agent.py
src/agents/risk/: agent.py
src/agents/social/: agent.py
src/agents/sum/: agent.py
src/simulation/: __init__.py  cli.py  config.py  effects.py  graph.py  heuristics.py  llm.py  models.py  scenario_tagger.py
tests/: test_simulation.py
